Moved booking module styles out of core, whitespace fixes and added new elements to examination view

--- a/sass/new/openeyes/components/events/_event.scss
+++ b/sass/new/openeyes/components/events/_event.scss
@@ -8,13 +8,13 @@ $oe-event-title-padding: 9px 0 9px 50px !default;
 $oe-event-title-font-size: emCalc(19px) !default;
 
 $oe-event-element-data-margin-bottom: 1em !default;
-$oe-event-element-value-padding-left: 10px !default;
-$oe-event-element-value-padding-bottom: 10px !default;
+$oe-event-element-value-padding-left: emCalc(10px) !default;
+$oe-event-element-value-padding-bottom: emCalc(10px) !default;
 $oe-event-element-value-font-size: $default-font-size !default;
 
 $oe-event-element-highlight-border-radius: 5px !default;
 $oe-event-element-highlight-bg-color: white !default;
-$oe-event-element-highlight-padding: 10px !default;
+$oe-event-element-highlight-padding: emCalc(10px) !default;
 $oe-event-element-highlight-font-size: emCalc(18px) !default;
 $oe-event-element-highlight-margin: 0 !default;
 $oe-event-element-highlight-list-item-font-size: 1em !default;
@@ -30,68 +30,68 @@ $oe-event-metadata-info-padding-right: 15px !default;
 $oe-event-metadata-user-color: #333333 !default;
 
 .event {
-    &.view {
-        .element {
-            border: 0;
-        }
-        .element-title {
-            font-size: $oe-event-view-element-title-font-size;
-            padding-left: $oe-event-view-element-title-padding-left;
-            font-style: normal;
-        }
-        .panel {
-            &.comments {
-                @include border-radius($oe-event-view-panel-comments-border-radius);
-            }
-        }
-    }
-    .event-title {
-        padding: $oe-event-title-padding;
-        font-size: $oe-event-title-font-size;
+	&.view {
+        background-position: right top;
         background-repeat: no-repeat;
-        background-position: left center;
-    }
-    .element-data {
-        margin-bottom: $oe-event-element-data-margin-bottom;
-    }
-    .element-value {
-        padding-left: $oe-event-element-value-padding-left;
-        padding-bottom: $oe-event-element-value-padding-bottom;
-        font-size: $oe-event-element-value-font-size;
-        line-height: 1.3;
-    }
-    .panel {
-        .element-value {
-            padding-left: 0;
-        }
-    }
-    .element-highlight {
-        @include border-radius($oe-event-element-highlight-border-radius);
-        background: $oe-event-element-highlight-bg-color;
-        padding: $oe-event-element-highlight-padding;
-        font-size: $oe-event-element-highlight-font-size;
-        margin: $oe-event-element-highlight-margin;
-        list-style-type: none;
-        li {
-            font-size: $oe-event-element-highlight-list-item-font-size;
-        }
-        &.important {
-            background: $oe-event-element-highlight-important-bg-color;
-        }
-    }
-    .metadata {
-        border-top: $oe-event-metadata-border-top;
-        padding-top: $oe-event-metadata-padding-top;
-        margin: $oe-event-metadata-margin;
-        .info {
-            font-size: $oe-event-metadata-info-font-size;
-            font-style: $oe-event-metadata-info-font-style;
-            color: $oe-event-metadata-info-color;
-            display: inline-block;
-            padding-right: $oe-event-metadata-info-padding-right;
-        }
-        .user {
-            color: $oe-event-metadata-user-color;
-        }
-    }
+		.element {
+			border: 0;
+		}
+		.element-title {
+			font-size: $oe-event-view-element-title-font-size;
+			padding-left: $oe-event-view-element-title-padding-left;
+			font-style: normal;
+		}
+		.panel {
+			&.comments {
+				@include border-radius($oe-event-view-panel-comments-border-radius);
+			}
+		}
+	}
+	.event-title {
+		padding: $oe-event-title-padding;
+		font-size: $oe-event-title-font-size;
+		background-repeat: no-repeat;
+		background-position: left center;
+	}
+	.element-data {
+		margin-bottom: $oe-event-element-data-margin-bottom;
+	}
+	.element-value {
+		padding-left: $oe-event-element-value-padding-left;
+		padding-bottom: $oe-event-element-value-padding-bottom;
+		font-size: $oe-event-element-value-font-size;
+		line-height: 1.3;
+		&:last-child:not(.element-highlight,.comments) {
+			padding-bottom: 0;
+		}
+	}
+	.element-highlight {
+		@include border-radius($oe-event-element-highlight-border-radius);
+		background: $oe-event-element-highlight-bg-color;
+		padding: $oe-event-element-highlight-padding;
+		font-size: $oe-event-element-highlight-font-size;
+		margin: $oe-event-element-highlight-margin;
+		list-style-type: none;
+		li {
+			font-size: $oe-event-element-highlight-list-item-font-size;
+		}
+		&.important {
+			background: $oe-event-element-highlight-important-bg-color;
+		}
+	}
+	.metadata {
+		border-top: $oe-event-metadata-border-top;
+		padding-top: $oe-event-metadata-padding-top;
+		margin: $oe-event-metadata-margin;
+		.info {
+			font-size: $oe-event-metadata-info-font-size;
+			font-style: $oe-event-metadata-info-font-style;
+			color: $oe-event-metadata-info-color;
+			display: inline-block;
+			padding-right: $oe-event-metadata-info-padding-right;
+		}
+		.user {
+			color: $oe-event-metadata-user-color;
+		}
+	}
 }
